2009-05-02  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/39940
	* tree-ssa-pre.c (eliminate): Make sure we may propagate before
	doing so.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147065 138bc75d-0d04-0410-961f-82ee72b054a4